# amulet-core

./: .gitignore  Cargo.toml  PROJECT_ROADMAP.md  README.MD  kernel_spec.md  pre-commit-hook.yml
.github/workflows/: fuzz.yml
benches/: hash_bench.rs
docs/: rights.md
fuzz/: Cargo.toml  Dockerfile  fuzz_plan.md
fuzz/fuzz_targets/: kernel_apply.rs  kernel_apply_authz.rs  kernel_apply_entities.rs  kernel_apply_lc.rs  kernel_apply_sig.rs  kernel_process_event.rs  process_evt_causality.rs  roundtrip_frame.rs
fuzz/scripts/: gen_seeds.py
fuzz/seeds/: README.md
src/: command_traits.rs  crypto.rs  error.rs  lib.rs  primitives.rs  rights.rs  types.rs
src/access/: capability.rs  mod.rs
src/crypto/: classic.rs  fips.rs  mod.rs
src/domain/: command.rs  entity.rs  mod.rs
src/events/: event.rs  mod.rs
src/kernel/: core.rs  mod.rs  runtime.rs  tests.rs
src/time/: mod.rs  vector.rs
tests/: conformance_tests.rs  prop_append_delta.rs  prop_command_crypto_validation.rs  prop_kernel_validate.proptest-regressions  prop_kernel_validate.rs  prop_lamport.proptest-regressions  prop_lamport.rs  prop_rights.rs
