[package]
name = "amulet-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "amulet_core"
path = "src/lib.rs"

[dependencies]
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
sha3 = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["der"] }
tracing = "0.1"

[dependencies.criterion]
version = "0.5"
optional = true

[dev-dependencies]
proptest = "1.4"

[features]
bench = ["criterion"]
compat-primitives = []
telemetry = ["tracing/std", "dep:tracing-subscriber"]

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

